# cli2cpp

./: .gitignore  README.md  plan.md
compiler/CIL2CPP.CLI/: CIL2CPP.CLI.csproj  Program.cs
compiler/CIL2CPP.Core/: CIL2CPP.Core.csproj
compiler/CIL2CPP.Core/CodeGen/: CppCodeGenerator.Header.cs  CppCodeGenerator.Source.cs  CppCodeGenerator.cs
compiler/CIL2CPP.Core/IL/: AssemblyReader.cs  AssemblySet.cs  CIL2CPPAssemblyResolver.cs  DepsJsonParser.cs  RuntimeLocator.cs  TypeDefinitionInfo.cs
compiler/CIL2CPP.Core/IR/: CppNameMapper.cs  ICallRegistry.cs  IRBuilder.Async.cs  IRBuilder.AsyncEnumerable.cs  IRBuilder.Attributes.cs  IRBuilder.BclProxy.cs  IRBuilder.Cancellation.cs  IRBuilder.Collections.cs  IRBuilder.Emit.cs  IRBuilder.EqualityComparer.cs  IRBuilder.Generics.cs  IRBuilder.Linq.cs  IRBuilder.MdArray.cs  IRBuilder.Methods.cs  IRBuilder.Record.cs  IRBuilder.Reflection.cs  IRBuilder.Span.cs  IRBuilder.StringFormat.cs  IRBuilder.Thread.cs  IRBuilder.Types.cs  IRBuilder.ValueTuple.cs  IRBuilder.cs  IRCustomAttribute.cs  IRInstruction.cs  IRMethod.cs  IRType.cs  ReachabilityAnalyzer.cs
compiler/CIL2CPP.Tests/: AssemblyResolverTests.cs  AssemblySetTests.cs  BclProxyTests.cs  CppCodeGeneratorTests.cs  CppNameMapperTests.cs  DepsJsonParserTests.cs  ICallRegistryTests.cs  IRBuilderTests.cs  IRInstructionTests.cs  ReachabilityAnalyzerTests.cs  RuntimeLocatorTests.cs  TypeDefinitionInfoTests.cs
compiler/CIL2CPP.Tests/Fixtures/: SampleAssemblyFixture.cs
compiler/samples/FeatureTest/: Program.cs
compiler/samples/MathLib/: MathLib.csproj  MathUtils.cs
compiler/samples/MultiAssemblyTest/: MultiAssemblyTest.csproj  Program.cs
runtime/: CMakeLists.txt
runtime/cmake/: cil2cppConfig.cmake.in
runtime/include/cil2cpp/: array.h  async_enumerable.h  boxing.h  cancellation.h  cil2cpp.h  collections.h  delegate.h  exception.h  gc.h  icall.h  mdarray.h  memberinfo.h  object.h  reflection.h  stackalloc.h  string.h  task.h  threading.h  threadpool.h  type_info.h
runtime/include/cil2cpp/bcl/: System.Console.h  System.IO.h
runtime/src/: runtime.cpp
runtime/src/async/: async_enumerable.cpp  cancellation.cpp  task.cpp  threadpool.cpp
runtime/src/bcl/: System.Array.cpp  System.Console.cpp  System.Delegate.cpp  System.IO.cpp  System.MdArray.cpp  System.Object.cpp  System.String.Extra.cpp  System.String.cpp
runtime/src/collections/: dictionary.cpp  list.cpp
runtime/src/exception/: exception.cpp
runtime/src/gc/: gc.cpp
runtime/src/icall/: icall.cpp
runtime/src/reflection/: memberinfo.cpp  type.cpp
runtime/src/threading/: interlocked.cpp  monitor.cpp  thread.cpp
runtime/src/type_system/: type_info.cpp
runtime/tests/: CMakeLists.txt  test_array.cpp  test_async.cpp  test_collections.cpp  test_delegate.cpp  test_exception.cpp  test_gc.cpp  test_memberinfo.cpp  test_object.cpp  test_reflection.cpp  test_string.cpp  test_threading.cpp  test_type_system.cpp
tools/: dev.py
