cmake_minimum_required(VERSION 3.20)
project(cil2cpp VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# === BoehmGC (FetchContent) ===
# Cache downloads in .deps/ (gitignored) so deleting build/ won't re-download
set(FETCHCONTENT_BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/.deps"
    CACHE PATH "FetchContent cache directory")
include(FetchContent)

FetchContent_Declare(
    bdwgc
    GIT_REPOSITORY https://github.com/ivmai/bdwgc.git
    GIT_TAG v8.2.12
)
FetchContent_Declare(
    libatomic_ops
    GIT_REPOSITORY https://github.com/ivmai/libatomic_ops.git
    GIT_TAG v7.10.0
)

# Populate sources (download only, don't add_subdirectory yet)
FetchContent_GetProperties(bdwgc)
if(NOT bdwgc_POPULATED)
    FetchContent_Populate(bdwgc)
endif()
FetchContent_GetProperties(libatomic_ops)
if(NOT libatomic_ops_POPULATED)
    FetchContent_Populate(libatomic_ops)
endif()

# MSVC needs libatomic_ops inside bdwgc source tree
if(MSVC AND NOT EXISTS "${bdwgc_SOURCE_DIR}/libatomic_ops")
    file(CREATE_LINK "${libatomic_ops_SOURCE_DIR}" "${bdwgc_SOURCE_DIR}/libatomic_ops"
         COPY_ON_ERROR SYMBOLIC)
endif()

# Configure bdwgc options and add to build
set(enable_cplusplus ON CACHE BOOL "" FORCE)
set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(build_tests OFF CACHE BOOL "" FORCE)
set(enable_docs OFF CACHE BOOL "" FORCE)
set(install_headers OFF CACHE BOOL "" FORCE)
add_subdirectory(${bdwgc_SOURCE_DIR} ${bdwgc_BINARY_DIR} EXCLUDE_FROM_ALL)

# Match our DEBUG_POSTFIX so Debug installs gcd.lib, Release installs gc.lib
set_target_properties(gc PROPERTIES DEBUG_POSTFIX d)

# Runtime library sources
set(RUNTIME_SOURCES
    src/runtime.cpp
    src/gc/gc.cpp
    src/type_system/type_info.cpp
    src/exception/exception.cpp
    src/bcl/System.Object.cpp
    src/bcl/System.String.cpp
    src/bcl/System.Console.cpp
    src/bcl/System.Array.cpp
    src/bcl/System.Delegate.cpp
    src/icall/icall.cpp
    src/async/task.cpp
)

# Create static library
add_library(cil2cpp_runtime STATIC ${RUNTIME_SOURCES})

# Export as cil2cpp::runtime
set_target_properties(cil2cpp_runtime PROPERTIES
    EXPORT_NAME runtime
    DEBUG_POSTFIX d
)

# Include directories (BUILD_INTERFACE for building, INSTALL_INTERFACE for consumers)
target_include_directories(cil2cpp_runtime
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
        ${bdwgc_SOURCE_DIR}/include  # BoehmGC headers (gc/gc.h)
)

# BoehmGC — PRIVATE dep, installed separately for consumers
target_link_libraries(cil2cpp_runtime PRIVATE gc)
# GC_NOT_DLL: tell bdwgc headers we link statically (prevents __declspec(dllimport))
target_compile_definitions(cil2cpp_runtime PRIVATE GC_NOT_DLL)

# Platform-specific settings
if(WIN32)
    target_compile_definitions(cil2cpp_runtime PRIVATE CIL2CPP_WINDOWS)
    # dbghelp for stack traces — PUBLIC so consumers link it transitively
    target_link_libraries(cil2cpp_runtime PUBLIC $<$<CONFIG:Debug>:dbghelp>)
else()
    target_compile_definitions(cil2cpp_runtime PRIVATE CIL2CPP_POSIX)
    find_package(Threads REQUIRED)
    target_link_libraries(cil2cpp_runtime PUBLIC Threads::Threads)
endif()

# Compiler warnings
if(MSVC)
    target_compile_options(cil2cpp_runtime PRIVATE /W4)
else()
    target_compile_options(cil2cpp_runtime PRIVATE -Wall -Wextra -Wpedantic)
endif()

# Debug/Release configuration
target_compile_definitions(cil2cpp_runtime PRIVATE
    $<$<CONFIG:Debug>:CIL2CPP_DEBUG>
)

if(MSVC)
    target_compile_options(cil2cpp_runtime PRIVATE
        $<$<CONFIG:Debug>:/Zi /Od /RTC1>
        $<$<CONFIG:Release>:/O2 /DNDEBUG>
    )
else()
    target_compile_options(cil2cpp_runtime PRIVATE
        $<$<CONFIG:Debug>:-g -O0>
        $<$<CONFIG:Release>:-O2 -DNDEBUG>
    )
endif()

# ===== Install =====

install(TARGETS cil2cpp_runtime
    EXPORT cil2cppTargets
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
)

install(DIRECTORY include/
    DESTINATION include
)

# Install BoehmGC library (needed by consumers at link time)
install(FILES $<TARGET_FILE:gc> DESTINATION lib)

# CMake package config
install(EXPORT cil2cppTargets
    FILE cil2cppTargets.cmake
    NAMESPACE cil2cpp::
    DESTINATION lib/cmake/cil2cpp
)

include(CMakePackageConfigHelpers)

configure_package_config_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cil2cppConfig.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/cil2cppConfig.cmake"
    INSTALL_DESTINATION lib/cmake/cil2cpp
)

write_basic_package_version_file(
    "${CMAKE_CURRENT_BINARY_DIR}/cil2cppConfigVersion.cmake"
    VERSION ${PROJECT_VERSION}
    COMPATIBILITY AnyNewerVersion
)

install(FILES
    "${CMAKE_CURRENT_BINARY_DIR}/cil2cppConfig.cmake"
    "${CMAKE_CURRENT_BINARY_DIR}/cil2cppConfigVersion.cmake"
    DESTINATION lib/cmake/cil2cpp
)
